Refactor API routes and components for blog and category pages. Updated route handling to use promises for parameters, improved error handling, and optimized data fetching. Added webpack fallback for 'qs' module in next.config.js. Removed deprecated newsletter API route and updated .gitignore for deployment documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ Thumbs.db
 .env.local
 .cursor/
 *.markdown
+docs/deployment/strapi-deployment.md
+docs/deployment/strapi-deployment.mdx
+docs/deployment/frontend-deployment.md
+docs/deployment/frontend-deployment.mdx
+.env.*
